2009-11-04  Simon Hausmann  <hausmann@webkit.org>

        Reviewed by Tor Arne Vestbø.

        Provide a dummy re-implementation of QGraphicsLayoutItem::sizeHint(),
        similar to QWebView.

        * Api/qgraphicswebview.cpp:
        (QGraphicsWebView::sizeHint):
        * Api/qgraphicswebview.h:

2009-11-04  Simon Hausmann  <hausmann@webkit.org>

        Reviewed by Tor Arne Vestbø.

        Removed zoomFactoryChanged() signal and added
        linkClicked() to QGraphicsWebView, for consistency with
        QWebView.

        * Api/qgraphicswebview.cpp:
        (QGraphicsWebView::setPage):
        (QGraphicsWebView::setZoomFactor):
        * Api/qgraphicswebview.h:

2009-11-04  Simon Hausmann  <hausmann@webkit.org>

        Reviewed by Tor Arne Vestbø.

        Added QGraphicsWebView::findText() for convenience and consistency
        with QWebView.

        * Api/qgraphicswebview.cpp:
        (QGraphicsWebView::findText):
        * Api/qgraphicswebview.h:

2009-11-04  Simon Hausmann  <hausmann@webkit.org>

        Reviewed by Tor Arne Vestbø.

        Added QGraphicsWebView::pageAction() and triggerPageAction(), for
        consistency with QWebView.

        * Api/qgraphicswebview.cpp:
        (QGraphicsWebView::pageAction):
        (QGraphicsWebView::triggerPageAction):
        * Api/qgraphicswebview.h:

2009-11-04  Simon Hausmann  <hausmann@webkit.org>

        Reviewed by Tor Arne Vestbø.

        Removed QGraphicsWebView::toHtml() after API review.

        That's consistent with QWebView and also based on the assumption that
        toHtml() is called less frequently than setHtml().

        * Api/qgraphicswebview.cpp:
        * Api/qgraphicswebview.h:
        * tests/qgraphicswebview/tst_qgraphicswebview.cpp:
        (tst_QGraphicsWebView::qgraphicswebview):

2009-11-04  Simon Hausmann  <hausmann@webkit.org>

        Reviewed by Tor Arne Vestbø.

        Removed the interactive property of QGraphicsWebView.
