@@ -87,6 +87,8 @@ public:
 
     virtual QSizeF sizeHint(Qt::SizeHint which, const QSizeF& constraint) const;
 
+    virtual QVariant inputMethodQuery(Qt::InputMethodQuery query) const;
+
 public Q_SLOTS:
     void stop();
     void back();
